--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
-/* Add application styles & imports to this file! */
+/* You can add global styles to this file, and also import other style files */
+@import '~bs-stepper/dist/css/bs-stepper.min.css';
+
+body {
+	background-image : linear-gradient(#cc2b5e ,#753a88);
+	background-repeat : no-repeat;
+	margin: 0px !important;
+	line-height: 20px;
+}
+.background {
+	/*background-image : linear-gradient(#43cea2 ,#185a9d);*/
+	/*background-image : linear-gradient(#cc2b5e ,#753a88); /*  purple love*/
+	background-color : transparent !important;
+	min-height: calc(100vh - 40px);
+}
+.customBox {
+	background-color: #00000045 !important;
+}
+.shadow-1 {
+	box-shadow : 0 1rem 3rem rgba(0,0,0,1.175)!important;
+}
+.shadow-2 {
+	box-shadow : 0 1rem 1rem rgba(0,0,0,0.375)!important;
+}
+.topCustomBox {
+	margin-top : -100px;
+	
+}
+/* gif styling */
+.doctor {
+	border : 3px solid #cc2b5e;
+	box-shadow : 0 1rem 1rem rgba(0,0,0,0.375)!important;
+}
+/* gif styling ends*/
