--- a/src/styles.css
+++ b/src/styles.css
@@ -16,19 +16,25 @@ body {
 .customBox {
 	background-color: #00000045 !important;
 }
-@media (max-width : 700px){
+.doctorDiv {
+  width : 25%;
+}
+@media only screen and (max-width : 700px){
   .customBox{
       width : 100%;
   }
-  .line {
-    flex-grow: 0
-     !important; 
+  .customR {
+    margin-top : 60px !important;
+  }
+  .step{
+    width :15% !important;
   }
   #stepper1 {
-    margin-top: 50px !important;
+    margin-top: 40px !important;
   }
   .doctorDiv{
     width:70% !important;
+
   }
   .doctor {
     width : 100% !important;
@@ -51,3 +57,18 @@ body {
 }
 /* gif styling ends*/
 /*stepper customization*/
+/*check boxes*/
+.form-check-input[type="radio"]:not(:checked)+label, .form-check-input[type="radio"]:checked+label, label.btn input[type="radio"]:not(:checked)+label, label.btn input[type="radio"]:checked+label {
+    position: relative !important;
+    display: inline-block important;
+    height: 1.5625rem important;
+    padding-left: 35px important;
+    line-height: 1.5625rem important;
+    cursor: pointer important;
+    -webkit-user-select: none important;
+    -moz-user-select: none important;
+    -ms-user-select: none important;
+    user-select: none important;
+    -webkit-transition: .28s ease ;
+    transition: .28s ease;
+}
